# webstalker

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
tests/: conftest.py  test_crawl.py  test_diff.py  test_scanner.py  test_websites.py
webstalker/: config.py  db.py  diff.py  events.py  interval.py  main.py  models.py  normalize.py  scanner.py  scheduler.py  schemas.py  storage.py
webstalker/api/: events.py  versions.py  websites.py
webstalker/static/: app.js  style.css
webstalker/templates/: base.html  dashboard.html  version_detail.html  website_detail.html  website_form.html
webstalker/templates/partials/: diff_panel.html
webstalker/web/: pages.py
