[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webstalker"
version = "0.1.0"
description = "Local web app for monitoring website changes with GitHub-style diffs"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["webstalker*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
